--- a/package.json
+++ b/package.json
@@ -6,10 +6,23 @@
   "repository": "https://github.com/kinnamonb/map.git",
   "author": "Brett Kinnamon <b.kinnamon@outlook.com>",
   "license": "Apache-2.0",
+  "scripts": {
+    "start": "webpack-dev-server --open",
+    "build": "webpack",
+    "watch": "webpack --watch"
+  },
   "dependencies": {
     "knockout": "^3.4.2"
   },
   "devDependencies": {
-    "webpack": "^3.8.1"
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3"
   }
 }
