--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "author": "Brett Kinnamon <b.kinnamon@outlook.com>",
   "license": "Apache-2.0",
   "scripts": {
-    "start": "webpack-dev-server --open",
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
     "jquery": "^3.2.1",
@@ -23,7 +22,9 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.0.1",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3"
+    "webpack-dev-server": "^2.9.3",
+    "webpack-merge": "^4.1.0"
   }
 }
